docs: virtual thread Pinning JFR + Ambient Mode + HTTP/3 0-RTT replay + React 19 Compiler
java-modern-features.md: Pinning JFR troubleshooting (-Djdk.tracePinnedThreads + jdk.VirtualThreadPinned event), synchronized vs ReentrantLock matrix for JDK 21-23, dependency-level Pinning warning (BufferedReader/PrintStream/logging)
microservice-governance.md: Ambient Mode deep dive (ztunnel + Waypoint two-layer split, resource saving 70-90%, no-restart adoption, vs Cilium Service Mesh as next-gen contender), when Ambient does NOT apply
http-https.md: 0-RTT replay attack defense (idempotent only, server-side 425 Too Early, anti-replay window, nginx config), connection migration deep dive (why TCP cant, Connection ID 8-byte, real-world value 30% improvement)
react.md: React 19 GA three revolutions (Compiler auto-memo with annotation mode, Actions/useOptimistic/useFormStatus/useActionState, ref as prop + use API), 18-19 migration checklist